--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   github           : "mkiourlappou"
   google_plus      :
   keybase          :
-  instagram        : "https://www.instagram.com/maria9.kiou/"
+  instagram        : "maria9.kiou/"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "https://www.linkedin.com/in/maria-kiourlappou-b64729124/"
