--- a/_config.yml
+++ b/_config.yml
@@ -81,8 +81,8 @@ analytics:
 # Site Author
 author:
   name             : "Maria Kiourlappou"
-  avatar           : "profile.png"
-  bio              : "DPhil student at the University of Oxford.| From Cyprus."
+  #avatar           : "profile.png"
+  bio              : "DPhil student at the University of Oxford. From Cyprus."
   location         : "Oxford"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
