--- a/_config.yml
+++ b/_config.yml
@@ -81,6 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Maria Kiourlappou"
+  avatar           : 
   bio              : "DPhil student at the University of Oxford. From Cyprus."
   location         : "Oxford"
   employer         :
