--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,7 @@ analytics:
   provider               : "google-gtag" # false (default), "google", "google-universal", "custom"
   google:
     tracking_id          : "UA-155149996-1"
+    anonymize_ip         : # true, false (default)
 
 
 # Site Author
