--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google-gtag" # false (default), "google", "google-universal", "custom"
+  provider               : "google-universal" # "google-gtag" # false (default), "google", "google-universal", "custom"
   google:
     tracking_id          : "UA-155149996-1"
     anonymize_ip         : # true, false (default)
